# learn-bevy

./: .gitignore  Cargo.toml  Notes.md  thri.html
crafthouse/: Cargo.toml
crafthouse/examples/: editor.rs  shooter.rs  shooter_new.rs
crafthouse/src/: cameras.rs  lib.rs  main.rs.bak
crafthouse/src/cameras/: blender_camera.rs  shooter_camera.rs
examples/: shooter.rs
src/: main.rs
src/cameras/: blender_cam.rs  cameras.rs
